angular mini-project completed

--- a/src/app/Content/Characters/character-details/character-details.component.css
+++ b/src/app/Content/Characters/character-details/character-details.component.css
@@ -20,6 +20,12 @@ p{
   margin: 2px;
 }
 
+img{
+  margin-top: 10px;
+  width: 70%;
+  border-radius: 20px;
+}
+
 .chars{
   display: flex;
   flex-wrap: wrap;
