--- a/src/app/Header/header/header.component.html
+++ b/src/app/Header/header/header.component.html
@@ -8,7 +8,7 @@
   </div>
 
 
-  <div>
+  <div class="links">
     <a routerLink="characters">characters</a>
     <a routerLink="episodes">episodes</a>
     <a routerLink="locations">location</a>
