--- a/src/app/Content/Locations/location/location.component.css
+++ b/src/app/Content/Locations/location/location.component.css
@@ -1,4 +1,3 @@
-
 .card{
   display: flex;
   justify-content: center;
@@ -11,8 +10,8 @@
   height: 200px;
   text-align: center;
   font-family: Helvetica;
+  cursor: pointer;
 }
-
 
 p{
   margin: 2px;
