angular mini-project completed

--- a/src/app/Header/header/header.component.html
+++ b/src/app/Header/header/header.component.html
@@ -6,12 +6,10 @@
   <div>
     <img class="logo" src="assets/RandM.png">
   </div>
-
-
   <div class="links">
     <a routerLink="characters">characters</a>
     <a routerLink="episodes">episodes</a>
-    <a routerLink="locations">location</a>
+    <a routerLink="locations">locations</a>
   </div>
 </div>
 
