--- a/src/app/Content/Characters/characters/characters.component.html
+++ b/src/app/Content/Characters/characters/characters.component.html
@@ -1,4 +1,4 @@
-
+<ng-container *ngIf="characters" >
 <div class="background">
 
 <div class="father">
@@ -14,3 +14,4 @@
 <div>
 </div>
 </div>
+</ng-container>
