--- a/src/app/Content/Locations/location-details/location-details.component.html
+++ b/src/app/Content/Locations/location-details/location-details.component.html
@@ -1,3 +1,4 @@
+<ng-container *ngIf="location">
 <div class="card">
   <h1>{{location.name}}</h1>
   <p>{{location.dimension}}</p>
@@ -5,6 +6,11 @@
 </div>
 
 <h2>Characters from This Location</h2>
+
+
+
+
 <div class="chars">
 <app-character *ngFor="let character of location.residents" [url]="character"></app-character>
 </div>
+</ng-container>
