--- a/src/app/Content/Characters/character-details/character-details.component.html
+++ b/src/app/Content/Characters/character-details/character-details.component.html
@@ -1,9 +1,9 @@
+
+<ng-container *ngIf="character">
+
 <div class="card">
-
   <div>
-
     <img src="{{character.image}}" alt="{{character.name}}">
-
   </div>
   <div>
     <h1>{{character.name}}</h1>
@@ -17,3 +17,4 @@
 <div class="chars">
   <app-episode *ngFor="let episode of character.episode" [url]="episode"></app-episode>
 </div>
+</ng-container>
