--- a/src/app/Content/Episodes/episode-details/episode-details.component.html
+++ b/src/app/Content/Episodes/episode-details/episode-details.component.html
@@ -1,3 +1,4 @@
+<ng-container *ngIf="episode">
 <div class="card">
   <h1>{{episode.name}}</h1>
   <p>{{episode.episode}}</p>
@@ -8,3 +9,4 @@
 <div class="chars">
   <app-character *ngFor="let character of episode.characters" [url]="character"></app-character>
 </div>
+</ng-container>
