--- a/src/app/Content/Locations/location/location.component.html
+++ b/src/app/Content/Locations/location/location.component.html
@@ -1,5 +1,7 @@
+<ng-container *ngIf="location">
 <div (click)="getDetails()" class="card">
 <h2>{{location.name}}</h2>
 <p>{{location.dimension}}</p>
 <p>{{location.type}}</p>
 </div>
+</ng-container>
