--- a/src/app/Header/header/header.component.html
+++ b/src/app/Header/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="background">
   <div class="textWrap">
-    <h1>Rick And Morty</h1>
+    <h1 (click)="navigate()">Rick And Morty</h1>
   </div>
 
   <div>
