--- a/src/app/Content/Episodes/episodes/episodes.component.html
+++ b/src/app/Content/Episodes/episodes/episodes.component.html
@@ -1,18 +1,16 @@
-<div class="background">
+<ng-container *ngIf="episodes">
 
-  <div class="father">
-
-
-<app-episode *ngFor="let episode of episodes.results" [episode]="episode"></app-episode>
+  <div class="background">
+    <div class="father">
+      <app-episode *ngFor="let episode of episodes.results" [episode]="episode"></app-episode>
+    </div>
   </div>
 
-</div>
-
-<div class="paginator">
-<div class="pagesList" *ngFor="let page of pages" [ngClass]="{'active': (page==currentPage)}">
-  <div class="pageButton" (click)="getEpisodes(page)">{{page}}</div>
-</div>
-<div>
-</div>
-</div>
-
+  <div class="paginator">
+    <div class="pagesList" *ngFor="let page of pages" [ngClass]="{'active': (page==currentPage)}">
+      <div class="pageButton" (click)="getEpisodes(page)">{{page}}</div>
+    </div>
+    <div>
+    </div>
+  </div>
+</ng-container>
