--- a/src/app/Content/Locations/locations/locations.component.html
+++ b/src/app/Content/Locations/locations/locations.component.html
@@ -1,3 +1,5 @@
+<ng-container *ngIf="locations">
+
 <div class="background">
   <div class="father">
     <app-location *ngFor="let location of locations.results" [location]="location"></app-location>
@@ -9,4 +11,4 @@
     <div class="pageButton" (click)="getLocations(page)">{{page}}</div>
   </div>
   </div>
-
+</ng-container>
